renaming privacy-type page - globally changes

--- a/become-a-host/privacy-type.html
+++ b/become-a-host/privacy-type.html
@@ -176,7 +176,7 @@
                               aria-checked="true"
                               theme="[object Object]"
                             >
-                              <div class="_1o7kvyb">
+                              <div class="become-a-host__right-border-button">
                                 <div class="site-content__menu-header">An entire place</div>
                               </div>
                             </button>
@@ -192,7 +192,7 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_1o7kvyb">
+                              <div class="become-a-host__right-border-button">
                                 <div class="site-content__menu-header">A private room</div>
                               </div>
                             </button>
@@ -208,7 +208,7 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_1o7kvyb">
+                              <div class="become-a-host__right-border-button">
                                 <div class="site-content__menu-header">A shared room</div>
                               </div>
                             </button>
