--- a/edit/bring.html
+++ b/edit/bring.html
@@ -407,7 +407,7 @@
                                               data-testid="YES"
                                               theme="[object Object]"
                                             >
-                                              <div class="_1o7kvyb">
+                                              <div class="become-a-host__right-border-button">
                                                 <div class="site-content__menu-header">Yes</div>
                                               </div>
                                             </button>
@@ -421,7 +421,7 @@
                                               data-testid="NO"
                                               theme="[object Object]"
                                             >
-                                              <div class="_1o7kvyb">
+                                              <div class="become-a-host__right-border-button">
                                                 <div class="site-content__menu-header">
                                                   No, guests just need to show
                                                   up
