--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1068,7 +1068,7 @@
                                   data-testid="packing-list-yes-button"
                                   theme="[object Object]"
                                 >
-                                  <div class="_1o7kvyb">
+                                  <div class="become-a-host__right-border-button">
                                     <div class="site-content__menu-header">Yes</div>
                                   </div>
                                 </button>
@@ -1081,7 +1081,7 @@
                                     data-testid="packing-list-no-button"
                                     theme="[object Object]"
                                   >
-                                    <div class="_1o7kvyb">
+                                    <div class="become-a-host__right-border-button">
                                       <div class="site-content__menu-header">
                                         No, guests just need to show up
                                       </div>
