--- a/edit/bring.html
+++ b/edit/bring.html
@@ -1005,12 +1005,8 @@
                                               data-testid="YES"
                                               theme="[object Object]"
                                             >
-                                              <div class="_1o7kvyb">
-                                                <div
-                                                  class="site-content__menu-header"
-                                                >
-                                                  Yes
-                                                </div>
+                                              <div class="become-a-host__right-border-button">
+                                                <div class="site-content__menu-header">Yes</div>
                                               </div>
                                             </button>
                                           </div>
@@ -1023,10 +1019,8 @@
                                               data-testid="NO"
                                               theme="[object Object]"
                                             >
-                                              <div class="_1o7kvyb">
-                                                <div
-                                                  class="site-content__menu-header"
-                                                >
+                                              <div class="become-a-host__right-border-button">
+                                                <div class="site-content__menu-header">
                                                   No, guests just need to show
                                                   up
                                                 </div>
