renaming property-type page - globally changes

--- a/become-a-host/property-type-group.html
+++ b/become-a-host/property-type-group.html
@@ -176,10 +176,10 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_1p10xl4a">
+                              <div class="become-a-host__right-button-text">
                                 <div class="site-content__menu-header">Apartment</div>
                               </div>
-                              <div class="_1mplld7">
+                              <div class="become-a-host__right-button-img">
                                 <div
                                   class="img-middle"
                                   style="
@@ -192,7 +192,7 @@
                                   "
                                 >
                                   <img
-                                    class="img-full"
+                                    class=""
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -227,10 +227,10 @@
                               aria-checked="true"
                               theme="[object Object]"
                             >
-                              <div class="_1p10xl4a">
+                              <div class="become-a-host__right-button-text">
                                 <div class="site-content__menu-header">House</div>
                               </div>
-                              <div class="_1mplld7">
+                              <div class="become-a-host__right-button-img">
                                 <div
                                   class="img-middle"
                                   style="
@@ -243,7 +243,7 @@
                                   "
                                 >
                                   <img
-                                    class="img-full"
+                                    class=""
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -278,10 +278,10 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_1p10xl4a">
+                              <div class="become-a-host__right-button-text">
                                 <div class="site-content__menu-header">Secondary unit</div>
                               </div>
-                              <div class="_1mplld7">
+                              <div class="become-a-host__right-button-img">
                                 <div
                                   class="img-middle"
                                   style="
@@ -294,7 +294,7 @@
                                   "
                                 >
                                   <img
-                                    class="img-full"
+                                    class=""
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -329,10 +329,10 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_1p10xl4a">
+                              <div class="become-a-host__right-button-text">
                                 <div class="site-content__menu-header">Unique space</div>
                               </div>
-                              <div class="_1mplld7">
+                              <div class="become-a-host__right-button-img">
                                 <div
                                   class="img-middle"
                                   style="
@@ -345,7 +345,7 @@
                                   "
                                 >
                                   <img
-                                    class="img-full"
+                                    class=""
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -380,10 +380,10 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_1p10xl4a">
+                              <div class="become-a-host__right-button-text">
                                 <div class="site-content__menu-header">Bed and breakfast</div>
                               </div>
-                              <div class="_1mplld7">
+                              <div class="become-a-host__right-button-img">
                                 <div
                                   class="img-middle"
                                   style="
@@ -396,7 +396,7 @@
                                   "
                                 >
                                   <img
-                                    class="img-full"
+                                    class=""
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
@@ -431,10 +431,10 @@
                               aria-checked="false"
                               theme="[object Object]"
                             >
-                              <div class="_1p10xl4a">
+                              <div class="become-a-host__right-button-text">
                                 <div class="site-content__menu-header">Boutique hotel</div>
                               </div>
-                              <div class="_1mplld7">
+                              <div class="become-a-host__right-button-img">
                                 <div
                                   class="img-middle"
                                   style="
@@ -447,7 +447,7 @@
                                   "
                                 >
                                   <img
-                                    class="img-full"
+                                    class=""
                                     style="
                                       object-fit: cover;
                                       vertical-align: bottom;
