--- a/edit/title.html
+++ b/edit/title.html
@@ -638,7 +638,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                                         data-plugin-in-point-id="TITLE"
                                         data-section-id="TITLE"
                                       >
-                                        <div class="_1l56up5">
+                                        <div class="become-a-host__form-input-wrapper">
                                           <div dir="ltr">
                                             <textarea
                                               maxlength="60"
@@ -656,11 +656,9 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                                           </div>
                                         </div>
                                         <div class="_1b3feto">
-                                          <div class="_1wmtabt">
-                                            <span aria-hidden="true">
-                                              46/60
-                                            </span>
-                                            <span
+                                          <div class="become-a-host__text-count-content">
+                                            <span aria-hidden="true">46/60</span
+                                            ><span
                                               class="text-highlight dir dir-ltr"
                                               aria-atomic="true"
                                               aria-live="polite"
