fx bugs in press-release page

--- a/press-release.html
+++ b/press-release.html
@@ -1243,7 +1243,7 @@
                     <h2 class="postTeaser__gridTitle">Related stories</h2>
                     <div class="postTeaser__groupInner row">
                       <article
-                        class="postTeaser col-md-2 col-mdpl-4 post-334794 post type-post status-publish format-standard has-post-thumbnail hentry category-company-information postTeaser--mobileStacked"
+                        class="postTeaser  col-mdpl-4 post-334794 post type-post status-publish format-standard has-post-thumbnail hentry category-company-information postTeaser--mobileStacked"
                         data-post-id="334794"
                         data-timestamp="1659628800"
                       >
@@ -1304,7 +1304,7 @@
                         </div>
                       </article>
                       <article
-                        class="postTeaser col-md-2 col-mdpl-4 post-334740 post type-post status-publish format-standard has-post-thumbnail hentry category-company-information postTeaser--mobileStacked"
+                        class="postTeaser  col-mdpl-4 post-334740 post type-post status-publish format-standard has-post-thumbnail hentry category-company-information postTeaser--mobileStacked"
                         data-post-id="334740"
                         data-timestamp="1659470700"
                       >
@@ -1364,7 +1364,7 @@
                           </div>
                         </div>
                       </article>
-                      <article class="newsletterSignup col-md-2 col-mdpl-4">
+                      <article class="newsletterSignup  col-mdpl-4">
                         <div class="newsletterSignup__inner">
                           <h2 class="newsletterSignup__header">
                             Sign up for our newsletter
@@ -1402,8 +1402,8 @@
       </div>
       <footer class="siteFooter">
         <div class="siteFooter__main container">
-          <div class="row">
-            <div class="siteFooter__columnWrap col-xl-3">
+          <div class="siteFooter__main-row row">
+            <div class="siteFooter__columnWrap col-lg-3">
               <h4 class="siteFooter__columnTitle">About</h4>
               <ul id="menu-about" class="siteFooter__navColumn">
                 <li class="menu-item">
@@ -1430,7 +1430,7 @@
               </ul>
             </div>
 
-            <div class="siteFooter__columnWrap col-xl-3">
+            <div class="siteFooter__columnWrap col-lg-3">
               <h4 class="siteFooter__columnTitle">Hosting</h4>
               <ul id="menu-hosting" class="siteFooter__navColumn">
                 <li class="menu-item">
@@ -1459,7 +1459,7 @@
               </ul>
             </div>
 
-            <div class="siteFooter__columnWrap col-xl-3">
+            <div class="siteFooter__columnWrap col-lg-3">
               <h4 class="siteFooter__columnTitle">Community</h4>
               <ul id="menu-community" class="siteFooter__navColumn">
                 <li class="menu-item">
@@ -1480,7 +1480,7 @@
               </ul>
             </div>
 
-            <div class="siteFooter__columnWrap col-xl-3">
+            <div class="siteFooter__columnWrap col-lg-3">
               <h4 class="siteFooter__columnTitle">Support</h4>
               <ul id="menu-support" class="siteFooter__navColumn">
                 <li class="menu-item">
@@ -1515,7 +1515,7 @@
                 </li>
               </ul>
             </div>
-            <div class="siteFooter__columnWrap siteFooter__disclaimer col-xl-6">
+            <div class="siteFooter__columnWrap siteFooter__disclaimer col-lg-6">
               <h4 class="siteFooter__columnTitle">Disclaimer</h4>
 
               <p class="siteFooter__disclaimerText">
