fx bugs in no.9 in 404 page

--- a/404.html
+++ b/404.html
@@ -11,53 +11,59 @@
 
     <title>404 Page Not Found - Airbnb</title>
   </head>
+
   <body>
-    <header class="page-container page-container-responsive space-top-4">
-      <a href="/" class="icon icon-airbnb link-icon h2">
-        <span class="screen-reader-only"> Airbnb </span>
-        <img src="assets/images/404-logo.png" alt="" />
-        <!-- For nested -->
-        <img src="../assets/images/404-logo.png" alt="" />
-      </a>
-    </header>
-    <div class="page-container page-container-responsive">
-      <div class="row space-top-8 space-8">
-        <div class="col-5 col-middle">
-          <h1 class="text-jumbo text-ginormous">Oops!</h1>
-          <h2>We can't seem to find the page you're looking for.</h2>
-          <h6>Error code: 404</h6>
-          <ul class="list-unstyled">
-            <li>Here are some helpful links instead:</li>
-            <li><a style="color: #008489" href="/">Home</a></li>
-            <li><a style="color: #008489" href="/search">Search</a></li>
-            <li><a style="color: #008489" href="/help">Help</a></li>
-            <li>
-              <a
-                style="color: #008489"
-                href="/help/getting-started/how-to-travel"
-                >Traveling on Airbnb</a
-              >
-            </li>
-            <li>
-              <a style="color: #008489" href="/info/why_host"
-                >Hosting on Airbnb</a
-              >
-            </li>
-            <li>
-              <a style="color: #008489" href="/trust">Trust &amp; Safety</a>
-            </li>
-            <li><a style="color: #008489" href="/sitemaps">Sitemap</a></li>
-          </ul>
-        </div>
-        <div class="col-5 col-middle text-center">
-          <img
-            src="https://a0.muscache.com/airbnb/static/error_pages/404-Airbnb_final-d652ff855b1335dd3eedc3baa8dc8b69.gif"
-            width="313"
-            height="428"
-            alt="Girl has dropped her ice cream."
-          />
-        </div>
+    <div class="wrap" role="document">
+      <div class="content">
+        <main class="main" id="mainContent" tabindex="-1">
+          <div class="container FourZeroFourContent">
+            <div class="row error-404" style="padding: 80px 0">
+              <div class="col-md-4 col-mdpl-7">
+                <h1 class="FourZeroFourContent__header">Oops!</h1>
+                <h2 class="FourZeroFourContent__subheader">
+                  We can't seem to find the page you're looking for.
+                </h2>
+                <h6 class="FourZeroFourContent__subheader">Error code: 404</h6>
+                <p class="FourZeroFourContent__text">
+                  Here are some helpful links instead:
+                </p>
+                <ul class="FourZeroFourContent__links">
+                  <li><a href="/">Home</a></li>
+                  <li>
+                    <a
+                      href="https://www.airbnb.com/s/all?refinement_paths%5B%5D=%2Ffor_you"
+                    >
+                      Search
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.airbnb.com/help?from=footer">Help</a>
+                  </li>
+                  <li>
+                    <a href="https://www.airbnb.com/host/homes">
+                      Hosting on Airbnb
+                    </a>
+                  </li>
+                  <li>
+                    <a href="https://www.airbnb.com/trust">
+                      Trust &amp; Safety
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-mdpl-2 col-mdpl-5">
+                <img
+                  src="https://a0.muscache.com/airbnb/static/error_pages/404-Airbnb_final-d652ff855b1335dd3eedc3baa8dc8b69.gif"
+                  width="313"
+                  class="hide-sm"
+                  alt="Girl has dropped her ice cream."
+                />
+              </div>
+            </div>
+          </div>
+        </main>
       </div>
     </div>
   </body>
 </html>
+
