--- a/products-luxe.html
+++ b/products-luxe.html
@@ -18578,9 +18578,9 @@
 <div id="gallery-modal-mobile" class="hidden" dir="ltr">
   <section>
     <div class="_j292vx" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" tabindex="-1" style="position: relative;">
             <div class="block">
               <div class="flex-before-after dir dir-ltr">
@@ -18589,9 +18589,9 @@
                     data-section-id="PHOTO_TOUR_SCROLLABLE_MODAL">
                     <section>
                       <div class="_j292vx" data-testid="modal-container">
-                        <div class="_z4lmgp">
+                        <div class="contents">
                           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-                          <div class="_z4lmgp">
+                          <div class="contents">
                             <div role="dialog" aria-label="Property overview" aria-modal="true" class="_14oeh8k8">
                               <div class="_xgxxi4">
                                 <div class="_1kpxj8f"><button data-button="close" aria-label="Close" type="button"
@@ -22939,9 +22939,9 @@
 <div id="lightbox-modal-mobile" class="hidden" dir="ltr">
   <section id="lightbox-mobile-img-1" class="hidden">
     <div class="_j292vx" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="Property overview" aria-modal="true" class="_ojerypf"
             style="position: relative;">
             <div>
@@ -23028,9 +23028,9 @@
   </section>
   <section id="lightbox-mobile-img-2" class="hidden">
     <div class="_j292vx" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="Property overview" aria-modal="true" class="_ojerypf"
             style="position: relative;">
             <div>
@@ -23124,9 +23124,9 @@
 <div id="gallery-modal" class="hidden" dir="ltr">
   <section>
     <div class="_j292vx" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" tabindex="-1" style="position: relative;">
             <div class="_88xxct">
               <div class="flex-before-after dir dir-ltr">
@@ -23135,9 +23135,9 @@
                     data-section-id="PHOTO_TOUR_SCROLLABLE_MODAL">
                     <section>
                       <div class="_j292vx" data-testid="modal-container">
-                        <div class="_z4lmgp">
+                        <div class="contents">
                           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-                          <div class="_z4lmgp">
+                          <div class="contents">
                             <div role="dialog" aria-label="Property overview" aria-modal="true" class="_14oeh8k8">
                               <div class="_xgxxi4">
                                 <div class="_1kpxj8f"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
@@ -27182,9 +27182,9 @@
 <div id="lightbox-modal" class="hidden" dir="ltr">
   <section id="lightbox-img-1" class="hidden">
     <div class="_j292vx" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="Property overview" aria-modal="true" class="_ojerypf"
             style="position: relative;">
             <div>
@@ -27293,9 +27293,9 @@
   </section>
   <section id="lightbox-img-2" class="hidden">
     <div class="_j292vx" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="Property overview" aria-modal="true" class="_ojerypf"
             style="position: relative;">
             <div>
