--- a/products.html
+++ b/products.html
@@ -21535,9 +21535,9 @@
 <div id="gallery-modal-mobile" class="hidden" dir="ltr">
   <section>
     <div class="_j292vx" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" tabindex="-1" style="position: relative;">
             <div class="block">
               <div class="flex-before-after dir dir-ltr">
@@ -21546,9 +21546,9 @@
                     data-section-id="PHOTO_TOUR_SCROLLABLE_MODAL">
                     <section>
                       <div class="_j292vx" data-testid="modal-container">
-                        <div class="_z4lmgp">
+                        <div class="contents">
                           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-                          <div class="_z4lmgp">
+                          <div class="contents">
                             <div role="dialog" aria-label="" aria-modal="true" class="_14oeh8k8">
                               <div class="_xgxxi4">
                                 <div class="_1kpxj8f"><button aria-label="Close" type="button" class="_oda838"><span
@@ -23065,9 +23065,9 @@
 <div id="lightbox-modal-mobile" class="hidden" dir="ltr">
   <section>
     <div class="_j292vx" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative;">
             <div>
               <div class="_1ksvx0f1">
@@ -23354,9 +23354,9 @@
 <div id="gallery-modal" class="hidden" dir="ltr">
   <section>
     <div class="_j292vx" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" tabindex="-1" style="position: relative;">
             <div class="_88xxct">
               <div class="flex-before-after dir dir-ltr" style="">
@@ -23365,9 +23365,9 @@
                     data-section-id="PHOTO_TOUR_SCROLLABLE_MODAL">
                     <section>
                       <div class="_j292vx" data-testid="modal-container">
-                        <div class="_z4lmgp">
+                        <div class="contents">
                           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-                          <div class="_z4lmgp">
+                          <div class="contents">
                             <div role="dialog" aria-label="" aria-modal="true" class="_14oeh8k8">
                               <div class="_xgxxi4">
                                 <div class="_1kpxj8f"><button data-button="close" aria-label="Close" type="button" class="_oda838"><span
@@ -24714,9 +24714,9 @@
 <div id="lightbox-modal" class="hidden" dir="ltr">
   <section>
     <div class="_j292vx" data-testid="modal-container">
-      <div class="_z4lmgp">
+      <div class="contents">
         <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-        <div class="_z4lmgp">
+        <div class="contents">
           <div role="dialog" aria-label="" aria-modal="true" class="_ojerypf" style="position: relative;">
             <div>
               <div class="_1ksvx0f1">
