--- a/inbox.html
+++ b/inbox.html
@@ -142,9 +142,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="_z4lmgp">
+                <div class="contents">
                   <div class="_b21f4g" aria-hidden="true"></div>
-                  <div class="_z4lmgp">
+                  <div class="contents">
                     <div id="hosting-flyout-menu" aria-label="Open hosting menu">
                       <div class="_11rss4h">
                         <div class="_12d0llg5">
